tests/positive/builtins.ax
module builtins;

struct Pair {
    a: i32;
    b: i32;
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    var pair: Pair = Pair { a: 1, b: 2 };
    let addr: usize = ptr_addr(&pair);
    let pair_ptr: *mut Pair = ptr_from_addr(*mut Pair, addr);
    let pointer_size: usize = size_of(*mut Pair);
    let pointer_align: usize = align_of(*mut Pair);
    if pointer_size == cast(usize, 0) || pointer_align == cast(usize, 0) {
        return 1;
    }
    return pair_ptr.a + pair_ptr.b - 3;
}
